--- a/frontend/src/assets/scss/all_collections.scss
+++ b/frontend/src/assets/scss/all_collections.scss
@@ -39,6 +39,7 @@
     .swiper_product {
       background: #fff;
       box-shadow: 0 0 4px rgba(0,0,0, 0.16);
+      transition: all .3s;
       .caption {
         padding: 15px 20px 27px;
         h2 {
@@ -58,6 +59,9 @@
           }
           font-size: 13px;
         }
+      }
+      &:hover {
+        box-shadow: 0 0 10px rgba(0,0,0, 0.2);
       }
     }
   }
