--- a/frontend/src/assets/scss/all_collections.scss
+++ b/frontend/src/assets/scss/all_collections.scss
@@ -59,6 +59,23 @@
           }
           font-size: 13px;
         }
+        .product_btn {
+          .add_to_cart {
+            color: #fff;
+            background: $btn-yellow;
+            padding: 5px 20px;
+            border-color: $btn-yellow;
+            transition: all .3s;
+            width: 100%;
+            svg {
+              margin-right: 10px;
+            }
+            &:hover {
+              background: #fff;
+              color: $btn-yellow;
+            }
+          }
+        }
       }
       &:hover {
         box-shadow: 0 0 10px rgba(0,0,0, 0.2);
