--- a/frontend/src/assets/scss/header.scss
+++ b/frontend/src/assets/scss/header.scss
@@ -5,7 +5,7 @@ header {
   >div {
     display: flex;
     justify-content: space-between;
-    .logo {
+    .logo a {
       color: #fff;
       font-weight: bold;
     }
