--- a/frontend/src/assets/scss/color.scss
+++ b/frontend/src/assets/scss/color.scss
@@ -2,6 +2,7 @@ $primary: #4983a7;
 $title-gray: #555;
 $title-dark-gray: #333;
 $light-gray: #bababa;
+$bright-gray: #d1d1d1;
 $basic-red: #e85650;
 $price-red: #be0b0b;
 $count-red: #e30000;
