加上假資料

--- a/frontend/src/assets/scss/cart.scss
+++ b/frontend/src/assets/scss/cart.scss
@@ -34,108 +34,154 @@
   }
   .cart_body {
     min-height: 816px;
-    .row {    
-      margin-top: 50px;
-    }
-  }
-  .table {
-    .content {
-      display: flex;
-      >div {
-        &:not(:last-child) {
-          border-right: 4px solid $body-gray;
-        }
-      }
-    }
-    .items {
-      width: 54%;
-    }
-    .quantity, .price, .total {
-      width: 18%;
-    }
-    .table_head {
-      background: $dark-blue2;
-      color: #fff;
+    margin-top: 50px;
+    .table {
       .content {
+        display: flex;
         >div {
-          padding: 3px 0 3px 18px;
-          &:last-child {
-            text-align: right;
-            padding: 3px 18px 3px 0;
+          &:not(:last-child) {
+            border-right: 4px solid $body-gray;
           }
         }
       }
+      .items {
+        width: 54%;
+      }
+      .quantity, .price, .total {
+        width: 18%;
+      }
+      .table_head {
+        background: $dark-blue2;
+        color: #fff;
+        .content {
+          >div {
+            padding: 3px 0 3px 18px;
+            &:last-child {
+              text-align: right;
+              padding: 3px 18px 3px 0;
+            }
+          }
+        }
+      }
+      .table_body {
+        .content {
+          padding: 30px 0;
+          border-bottom: 2px solid #ebebeb;
+          >div {
+            &:not(.items) {
+              text-align: center;
+            }
+          }
+          .items {
+            display: flex;
+            justify-content: space-between;
+            .product_image {
+              width: 15%;
+            }
+            h2 {
+              width: 80%;
+              font-size: 18px;
+              line-height: 1.5;
+              a {
+                color: $title-gray;
+              }
+            }
+          }
+          .quantity {
+            .block {
+              width: 70%;
+              margin: 0 auto;
+              .control {
+                width: 100%;
+                display: flex;
+                margin-bottom: 15px;
+                * { 
+                  color: #888;
+                  &:focus {
+                    outline: none;
+                  }
+                }
+                button {
+                  border: 1px solid #ccc;
+                  &.disabled {
+                    opacity: .4;
+                    cursor: auto;
+                  }
+                  &.dec {
+                    border-radius: 4px 0 0 4px;
+                    border-right: none;
+                  }
+                  &.inc {
+                    border-radius: 0 4px 4px 0;
+                    border-left: none;
+                  }
+                }
+                input {
+                  border: 1px solid #ccc;
+                  min-width: 0;
+                  text-align: center;
+                  &:focus {
+                    outline: none;
+                  }
+                }
+              }
+              .remove {
+                border: none;
+                background: none;
+                color: $basic-red;
+                opacity: .7;
+                font-size: 13px;
+                &:hover {
+                  opacity: 1;
+                }
+              }
+            }
+          }
+          .price, .total {
+            font-weight: bold;
+            color: $dark-blue;
+          }
+        }
+      }
     }
-    .table_body {
-      .content {
-        padding: 30px 0;
-        border-bottom: 2px solid #ebebeb;
-        >div {
-          &:not(.items) {
-            text-align: center;
+    .row {
+      margin-top: 60px;
+      .subtotals {
+        background: #efefef;
+        border: solid 1px #d6d6d6;
+        padding: 30px 30px 40px;
+        .upper_block {
+          color: $title-gray;
+          font-size: 16px;
+          border-bottom: 1px solid #bebebe;
+          padding-bottom: 10px;
+          >div {
+            margin-bottom: 10px;
           }
         }
-        .items {
-          display: flex;
-          justify-content: space-between;
-          .product_image {
-            width: 15%;
+        .lower_block {
+          color: $price-red;
+          font-size: 24px;
+          b{
+            color: $title-gray;
           }
-          h2 {
-            width: 80%;
-            font-size: 18px;
-            line-height: 1.5;
-            a {
-              color: $title-gray;
+          .the_total {
+            margin: 15px 0 20px;
+          }
+          .checkout {
+            width: 100%;
+            border: 2px solid $btn-yellow;
+            background: $btn-yellow;
+            color: #fff;
+            font-size: 14px;
+            svg {
+              margin-right: 10px;
+            }
+            &:hover {
+              background: #fff;
+              color: $btn-yellow;
             }
           }
-        }
-        .quantity {
-          .block {
-            width: 70%;
-            margin: 0 auto;
-            .control {
-              width: 100%;
-              display: flex;
-              margin-bottom: 15px;
-              * { color: #888; }
-              button {
-                border: 1px solid #ccc;
-                &.disabled {
-                  opacity: .4;
-                }
-                &.dec {
-                  border-radius: 4px 0 0 4px;
-                }
-                &.inc {
-                  border-radius: 0 4px 4px 0;
-                }
-              }
-              input {
-                border: solid #ccc;
-                border-width: 1px 0;
-                min-width: 0;
-                text-align: center;
-                &:focus {
-                  outline: none;
-                }
-              }
-            }
-            .remove {
-              border: none;
-              background: none;
-              color: $basic-red;
-              opacity: .7;
-              font-size: 13px;
-              &:hover {
-                opacity: 1;
-              }
-            }
-          }
-        }
-        .price, .total {
-          font-weight: bold;
-          color: $dark-blue;
         }
       }
     }
