--- a/frontend/src/assets/scss/cart.scss
+++ b/frontend/src/assets/scss/cart.scss
@@ -145,11 +145,66 @@
       }
     }
     .row {
-      margin-top: 60px;
-      .subtotals {
+      margin: 60px 0;
+      >div>div {
         background: #efefef;
         border: solid 1px #d6d6d6;
-        padding: 30px 30px 40px;
+        padding: 30px 30px;
+      }
+      .buyers_form {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        h3 {
+          width: 100%;
+          font-size: 18px;
+          margin-bottom: 20px;
+          color: $title-gray;
+          padding-left: 10px;
+          border-left: 3px solid $dark-blue;
+        }
+        >div {
+          input {
+            &:focus {
+              outline: none;
+            }
+          }
+          &:not(.pay) {
+            flex: 0 0 48%;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 10px;
+            label {
+              flex: 0 0 25%;
+            }
+            input {
+              flex: 0 0 75%;
+            }
+          }
+          &.pay {
+            display: flex;
+            >div {
+              margin-right: 10px;
+            }
+          }
+        }
+        .checkout {
+          width: 100%;
+          border: 2px solid $btn-yellow;
+          background: $btn-yellow;
+          color: #fff;
+          font-size: 14px;
+          margin-top: 20px;
+          svg {
+            margin-right: 10px;
+          }
+          &:hover {
+            background: #fff;
+            color: $btn-yellow;
+          }
+        }
+      }
+      .subtotals {
         .upper_block {
           color: $title-gray;
           font-size: 16px;
@@ -166,21 +221,7 @@
             color: $title-gray;
           }
           .the_total {
-            margin: 15px 0 20px;
-          }
-          .checkout {
-            width: 100%;
-            border: 2px solid $btn-yellow;
-            background: $btn-yellow;
-            color: #fff;
-            font-size: 14px;
-            svg {
-              margin-right: 10px;
-            }
-            &:hover {
-              background: #fff;
-              color: $btn-yellow;
-            }
+            margin: 15px 0 0;
           }
         }
       }
