將input ,button focus效果移除

--- a/frontend/src/assets/scss/theme.scss
+++ b/frontend/src/assets/scss/theme.scss
@@ -12,6 +12,11 @@ a {
     text-decoration: none;
   }
 }
+input, button {
+  &:focus {
+    outline: none;
+  }
+}
 
 .swiper-container {
   position: relative;
